tests/baselines/reference/newOnInstanceSymbol.errors.txt
tests/cases/compiler/newOnInstanceSymbol.ts(3,1): error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.


==== tests/cases/compiler/newOnInstanceSymbol.ts (1 errors) ====
    class C {}
    var x = new C(); // should be ok
    new x(); // should error
    ~~~~~~~
!!! error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.